# OSE_Exchange

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile-occamMdp3  README.md  SCP  build-test-release.sh  build-test.sh  build.sh  build_d.sh  cbuild-test-release.sh  cbuild-test.sh  cbuild.sh  cbuild_d.sh
config/: CMakeLists.txt
config/config/: ALU-NR.conf  HRP-NR.conf  MLE-CERT.conf
config/config5/: README.md
config/settings/: CLN  DbSettings.txt  Menu.txt  NEW_WEEK  SCRUNIT
doc/docbook/: annotated.xml  class_algo_factory.xml  class_algo_hdg_encoder.xml  class_algo_json.xml  class_algo_p_l_callback.xml  class_app_msg_proc.xml  class_audit_trail_writer.xml  class_audit_trail_writer_v3.xml  class_cme_settings_helper.xml  class_console_logger.xml  class_custom_h_f_t_map.xml  class_custom_hash_table.xml  class_efvi_eth_receiver.xml  class_efvi_receiver.xml  class_efvi_tcp_client.xml  class_efvi_tcp_server.xml  class_efvi_udp_receiver.xml  class_efvi_udp_sender.xml  class_error_codes.xml  class_exch_handler_log_svc.xml  class_execution_timer.xml  class_file_logger.xml  class_file_order_loader_v3.xml  class_formatter_base.xml  class_hash_map.xml  class_i_buffer_sender.xml  class_i_exchange_sender.xml  class_i_l3_app_msg_callback.xml  class_i_l3_cert_helpers.xml  class_i_logger.xml  class_i_menu.xml  class_i_zmq_subscriber.xml  class_json_order_decoders.xml  class_json_url_poster.xml  class_json_url_reader.xml  class_k_t01_1_1_m_s_g_w_1_1_cme_msgw.xml  class_k_t01_1_1_m_s_g_w_1_1_msgw.xml  class_k_t01_1_1_m_s_g_w_1_1_product_gw.xml  class_k_t01_1_1_s_e_c_d_e_f_1_1_cme_prod_def.xml  class_k_t01_1_1_s_e_c_d_e_f_1_1_cme_sec_def.xml  (+598 more)
doc/html/: annotated.html  annotated_dup.js  class_algo_factory-members.html  class_algo_factory.html  class_algo_hdg_encoder-members.html  class_algo_hdg_encoder.html  class_algo_hdg_encoder.js  class_algo_json-members.html  class_algo_json.html  class_algo_p_l_callback-members.html  class_algo_p_l_callback.html  class_algo_p_l_callback.js  class_app_msg_proc-members.html  class_app_msg_proc.html  class_app_msg_proc.js  class_audit_trail_writer-members.html  class_audit_trail_writer.html  class_audit_trail_writer.js  class_audit_trail_writer_v3-members.html  class_audit_trail_writer_v3.html  class_audit_trail_writer_v3.js  class_cme_settings_helper-members.html  class_cme_settings_helper.html  class_console_logger-members.html  class_console_logger.html  class_console_logger.js  class_custom_h_f_t_map-members.html  class_custom_h_f_t_map.html  class_custom_h_f_t_map.js  class_custom_hash_table-members.html  class_custom_hash_table.html  class_custom_hash_table.js  class_efvi_eth_receiver-members.html  class_efvi_eth_receiver.html  class_efvi_receiver-members.html  class_efvi_receiver.html  class_efvi_receiver.js  class_efvi_tcp_client-members.html  class_efvi_tcp_client.html  class_efvi_tcp_client.js  (+1654 more)
doc/latex/: annotated.tex  class_algo_factory.eps  class_algo_factory.tex  class_algo_hdg_encoder.tex  class_algo_json.tex  class_algo_p_l_callback.eps  class_algo_p_l_callback.tex  class_app_msg_proc.tex  class_audit_trail_writer.eps  class_audit_trail_writer.tex  class_audit_trail_writer_v3.eps  class_audit_trail_writer_v3.tex  class_cme_settings_helper.tex  class_console_logger.eps  class_console_logger.tex  class_custom_h_f_t_map.tex  class_custom_hash_table.tex  class_efvi_eth_receiver.eps  class_efvi_eth_receiver.tex  class_efvi_receiver.eps  class_efvi_receiver.tex  class_efvi_tcp_client.tex  class_efvi_tcp_server.tex  class_efvi_udp_receiver.eps  class_efvi_udp_receiver.tex  class_efvi_udp_sender.tex  class_error_codes.tex  class_exch_handler_log_svc.tex  class_execution_timer.tex  class_file_logger.tex  class_file_order_loader_v3.tex  class_formatter_base.eps  class_formatter_base.tex  class_hash_map.tex  class_i_buffer_sender.tex  class_i_exchange_sender.eps  class_i_exchange_sender.tex  class_i_l3_app_msg_callback.tex  class_i_l3_cert_helpers.tex  class_i_logger.eps  (+696 more)
src/: Main.cpp  README.md  Raptor2.cpp  Raptor2.hpp
src/AlgoCalculators/: IntervalTimer.cpp  IntervalTimer.hpp  SimpleTimer.cpp  SimpleTimer.hpp  TimerCallback.cpp  TimerCallback.hpp  WeightedAverageCalculator.cpp  WeightedAverageCalculator.hpp
src/AlgoEngines/: ImpliedPricer.cpp  ImpliedPricer.hpp  MatrixGen.cpp  MatrixGen.hpp  PLMonitor.cpp  PLMonitor.hpp  PricingStrategyBase.cpp  PricingStrategyBase.hpp  QuoterV3.cpp  QuoterV3.hpp  SpreadPricer.cpp  SpreadPricer.hpp  WavgCalcMulti.cpp  WavgCalcMulti.hpp  engine_structs.hpp  pricing_structs.hpp
src/AlgoParams/: AklStackerParams.cpp  AklStackerParams.hpp  AlgoInitializer.hpp  AutoHedgeOB2Params.cpp  AutoHedgeOB2Params.hpp  IParams.hpp  IcebergParams.cpp  IcebergParams.hpp  LegParamParser.cpp  LegParamParser.hpp  MS2Params.cpp  MS2Params.hpp  OrderParser.cpp  OrderParser.hpp  PLWatcherParams.cpp  PLWatcherParams.hpp  Position.hpp  RiskBase.hpp  SkewTraderParams.cpp  SkewTraderParams.hpp  SkewerParams.cpp  SkewerParams.hpp  SqueezerParams.cpp  SqueezerParams.hpp  StackerParams.cpp  StackerParams.hpp  StackerTimerParams.cpp  StackerTimerParams.hpp  TimedAvgParams.cpp  TimedAvgParams.hpp  WavesParams.cpp  WavesParams.hpp
src/AlgoSupport/: AlgoHdgEncoder.hpp  AlgoJson.cpp  AlgoJson.hpp  AlgoMktDataCallback.cpp  AlgoMktDataCallback.hpp  AlgoPLCallback.cpp  AlgoPLCallback.hpp  algo_enums.hpp  algo_helpers.cpp  algo_helpers.hpp  algo_pl.hpp  algo_structs.hpp
src/Algos/: AlgoBaseV3.cpp  AlgoBaseV3.hpp  AlgoFactory.cpp  AlgoFactory.hpp  AlgoPch.hpp  AlgoServiceBrokerV3.cpp  AlgoServiceBrokerV3.hpp  AutoHedgeOB.cpp  Twap.cpp  (+20 more)
test/: AklStackerSettingsTest.cpp  AklStackerTest.cpp  BookTest.cpp  CMakeLists.txt  CircularArrayTest.cpp  DualStackerTest.cpp  FixedSizeVectorTest.cpp  Helpers.hpp  PositionManagerTest.cpp  PriceConverterTest.cpp  ProrataTest.cpp  QuantityTest.cpp  RiskTest.cpp  SpreaderTest.cpp  SpreaderTest2.cpp  StackTest.cpp  StackerWithRateLimiterTest.cpp  StopTest.cpp  StressTest.cpp
test/impl/: ExchangeSender.hpp  StrategyTester.hpp
utils/: DEBUG_EXP  DEBUG_EXP~  EXPORT2  sftp_config.cfg  upload_via_sftp.sh
(+672 files in other folders)
