if (${AKL_TEST_MODE})
	add_executable(CircularArrayTest CircularArrayTest.cpp)
	target_link_libraries(CircularArrayTest PRIVATE gtest)
	add_executable(FixedSizeVectorTest FixedSizeVectorTest.cpp)
	target_link_libraries(FixedSizeVectorTest PRIVATE gtest)
	add_executable(QuantityTest QuantityTest.cpp)
	target_link_libraries(QuantityTest PRIVATE gtest)
	add_executable(BookTest BookTest.cpp)
	target_link_libraries(BookTest PRIVATE ${LIBS} gtest)
	# add_executable(PositionManagerTest PositionManagerTest.cpp)
	# target_link_libraries(PositionManagerTest PRIVATE ${LIBS} gtest)
	add_executable(PriceConverterTest PriceConverterTest.cpp)
	target_link_libraries(PriceConverterTest PRIVATE ${LIBS} gtest)
	add_executable(StackTest StackTest.cpp)
	target_link_libraries(StackTest PRIVATE ${LIBS} gtest)
	add_executable(AklStackerTest AklStackerTest.cpp)
	target_link_libraries(AklStackerTest PRIVATE ${LIBS} gtest)
	add_executable(AklStackerSettingsTest AklStackerSettingsTest.cpp)
	target_link_libraries(AklStackerSettingsTest PRIVATE ${LIBS} gtest)
	add_executable(DualStackerTest DualStackerTest.cpp)
	target_link_libraries(DualStackerTest PRIVATE ${LIBS} gtest)
	add_executable(StackerWithRateLimiterTest StackerWithRateLimiterTest.cpp)
	target_link_libraries(StackerWithRateLimiterTest PRIVATE ${LIBS} gtest)
	add_executable(StopTest StopTest.cpp)
	target_link_libraries(StopTest PRIVATE ${LIBS} gtest)
	add_executable(RiskTest RiskTest.cpp)
	target_link_libraries(RiskTest PRIVATE ${LIBS} gtest)
	add_executable(ProrataTest ProrataTest.cpp)
	target_link_libraries(ProrataTest PRIVATE ${LIBS} gtest)
	add_executable(SpreaderTest SpreaderTest.cpp)
	target_link_libraries(SpreaderTest PRIVATE ${LIBS} gtest)
	add_executable(SpreaderTest2 SpreaderTest2.cpp)
	target_link_libraries(SpreaderTest2 PRIVATE ${LIBS} gtest)
	add_executable(StressTest StressTest.cpp)
	target_link_libraries(StressTest PRIVATE ${LIBS} gtest)
endif()